z-index fix

--- a/styling/layout.css
+++ b/styling/layout.css
@@ -27,6 +27,7 @@ body > header, body > a[href] > header {
   margin: 0 auto;
   padding: 0;
   max-width: 28rem;
+  z-index: 100;
 }
 
 @media (min-width: 57rem) {
